# mofa-studio

./: CHECKLIST.md  README.md  mofa-studio-dora-integration-checklist.md  pyproject.toml
apps/mofa-fm/: Cargo.toml
apps/mofa-fm/dataflow/: maas_config.toml  study_config_student1.toml  study_config_student2.toml  study_config_tutor.toml  voice-chat.yml
apps/mofa-fm/src/: dora_integration.rs  lib.rs  mofa_hero.rs  system_monitor.rs
apps/mofa-fm/src/screen/: chat_panel.rs  design.rs  dora_handlers.rs  mod.rs
apps/mofa-settings/src/: screen.rs
apps/mofa-settings/src/data/: providers.rs
models/model-manager/: README.md  download_models.py
models/setup-local-models/: download-models.sh  install_all_packages.sh  install_all_packages_uv.sh  setup_isolated_env.sh  setup_isolated_env_uv.sh
mofa-dora-bridge/src/: dispatcher.rs  lib.rs  parser.rs  shared_state.rs
mofa-dora-bridge/src/widgets/: audio_player.rs  prompt_input.rs  system_log.rs
mofa-studio-shell/src/: app.rs
mofa-studio-shell/src/widgets/: dashboard.rs  mod.rs
mofa-widgets/: WIDGET_GUIDE.md
node-hub/dora-conference-controller/src/: main.rs
node-hub/dora-maas-client/: Cargo.toml  Cargo_streaming.toml  README.md  test_streaming.rs
node-hub/dora-maas-client/examples/: test_manual_sse.rs
node-hub/dora-maas-client/src/: config.rs  main.rs  streaming.rs
